finalizando projeto do curriculo com alternancia de temas